<resources>
    <string name="app_name" translatable="false">Shows-Franko_Vlahov</string>
    <string name="in_order_to_continue_please_log_in">In order to continue please log in.</string>
    <string name="login">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome,</string>
    <string name="shows">Shows</string>
    <string name="your_shows_are_not_showing_get_it">Your shows are not showing. Get it?</string>
    <string name="reviews">Reviews</string>
    <string name="write_a_review">Write a review</string>
    <string name="numberOfReviewsAndAverage">%1$s reviews, %2$s average</string>
    <string name="no_reviews_yet">No reviews yet.</string>
    <string name="confirm">Confirm</string>
    <string name="comment">Comment</string>
    <string name="please_add_a_rating">Please add a rating!</string>
    <string name="remember_me">Remember me</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="no_permission" translatable="false">Permission not granted to use camera, please enable. </string>
    <string name="settings">Settings</string>
    <string name="register">Register</string>
    <string name="enter_valid_email">Please enter a valid email!</string>
    <string name="email_password_dont_match">Email and password combination don\'t match</string>
    <string name="passwords_dont_match">Passwords don\'t match!</string>
    <string name="user_exists">User already exists!</string>

    <string name="repeat_password">Repeat password</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="no_internet">You don\'t have an internet connection!</string>
    <string name="top_rated">Top rated</string>
    <string name="ok">Ok</string>
    <string name="error">Error</string>
    <string name="api_error">Error retrieving data, entering offline mode.</string>
    <string name="internal_error">Internal error</string>
</resources>