<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="40dp"
    android:paddingEnd="24dp"
    android:paddingBottom="24dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_a_review"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/ratingReviewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:numStars="5"
        android:stepSize="1"

        android:theme="@style/RatingBar" />

    <TextView
        android:id="@+id/labelError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/please_add_a_rating"
        android:textColor="@color/purple_background"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerReview"
        style="@style/PurpleTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/confirm"
        app:cornerRadius="40dp" />

</LinearLayout>