<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".login.LoginFragment">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressCircular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/labelShows"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminate="true"
        app:indicatorColor="@color/white"
        style="CircularProgressIndicator.White"/>

    <ImageView
        android:id="@+id/imageTopLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_top_left_illustration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageTopRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_top_right_illustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageTriangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/ic_triangle_white"
        app:layout_constraintBottom_toBottomOf="@id/imageTopRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageTopLeft" />

    <TextView
        android:id="@+id/labelShows"
        style="@style/TextLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/shows"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/imageTriangle"
        app:layout_constraintStart_toEndOf="@id/imageTriangle"
        app:layout_constraintTop_toTopOf="@id/imageTriangle" />

    <TextView
        android:id="@+id/labelLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultLeftRightPadding"
        android:layout_marginEnd="@dimen/defaultLeftRightPadding"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/largerText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelPleaseLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultLeftRightPadding"
        android:layout_marginTop="@dimen/activity_login_view_margin_top"
        android:layout_marginEnd="@dimen/defaultLeftRightPadding"
        android:text="@string/in_order_to_continue_please_log_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerEmail"
        style="@style/WhiteTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultLeftRightPadding"
        android:layout_marginTop="@dimen/activity_login_view_margin_top"
        android:layout_marginEnd="@dimen/defaultLeftRightPadding"
        android:hint="@string/email"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelPleaseLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerPassword"
        style="@style/WhiteTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultLeftRightPadding"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/defaultLeftRightPadding"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkboxRememberMe"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/defaultLeftRightPadding"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:buttonTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerPassword"
        tools:checked="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/remember_me"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/checkboxRememberMe"
        app:layout_constraintStart_toEndOf="@id/checkboxRememberMe"
        app:layout_constraintTop_toTopOf="@id/checkboxRememberMe" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        style="@style/WhiteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultLeftRightPadding"
        android:layout_marginEnd="@dimen/defaultLeftRightPadding"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultLeftRightPadding"
        android:layout_marginEnd="@dimen/defaultLeftRightPadding"
        android:layout_marginBottom="@dimen/defaultTopBottomPadding"
        android:background="@color/transparent"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>