<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".show_details.ShowDetailsActivity">

    <!--    <com.google.android.material.appbar.CollapsingToolbarLayout-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollBody"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/cardWriteReview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/defaultLeftRightPadding"
            android:paddingEnd="@dimen/defaultLeftRightPadding">

            <TextView
                android:id="@+id/labelShowName"
                style="@style/TextLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="56dp"
                android:textColor="@color/black"
                tools:text="The Office" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageShowImage"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="fitCenter"
                tools:src="@drawable/ic_office" />

            <TextView
                android:id="@+id/labelShowDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColor="@color/black"
                tools:text="The Office is an American mockumentary sitcom television series that depicts the everyday work lives of office employees in the Scranton, Pennsylvania, branch of the fictional Dunder Mifflin Paper Company. It aired on NBC from March 24, 2005, to May 16, 2013, lasting a total of nine seasons." />

            <TextView
                android:id="@+id/labelReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/reviews"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/labelAverageRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAllCaps="true"
                tools:text="3 reviews, 3.63 average" />

            <RatingBar
                android:id="@+id/ratingShowRating"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.5"
                android:theme="@style/RatingBarIndicator" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:nestedScrollingEnabled="false"
                android:paddingBottom="48dp"
                tools:itemCount="3"
                tools:listitem="@layout/item_review" />

            <TextView
                android:id="@+id/labelNoReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="40dp"
                android:gravity="center"
                android:text="@string/no_reviews_yet" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/cardWriteReview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonWriteReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="11dp"
            android:text="@string/write_a_review"
            android:textAllCaps="false"
            app:cornerRadius="32dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>